style: corrected elements size on mobile devices

--- a/src/app/pages/home/categories/categories.component.scss
+++ b/src/app/pages/home/categories/categories.component.scss
@@ -12,6 +12,9 @@
     width: 638px;
     height: 526px;
     position: relative;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     img {
       width: 100%;
       height: 100%;
@@ -44,6 +47,9 @@
     justify-content: center;
     align-items: center;
     background-color: #fff;
+    @media (max-width: 768px) {
+      width: 100%;
+    }
     &-first {
       background-color: #F0F0F0;
     }
