--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,9 @@
 .ig-content {
   width: 546px;
   margin: 71px auto;
+  @media (max-width: 768px) {
+    width: 90%;
+  }
   .puff-title {
     margin-bottom: 65px;
   }
